<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewContactActivity" >

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/phone_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_editText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_editText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_editText"
        android:layout_alignParentBottom="true"
        android:onClick="onClickCancel"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/email_editText"
        android:onClick="onClickConfirm"
        android:text="@string/confirm" />

    <ImageView
        android:id="@+id/new_contact_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/image_description"
        android:maxHeight="135dp"
        android:maxWidth="135dp"
        android:minHeight="135dp"
        android:minWidth="135dp"
        android:src="@drawable/default_contact_image"
        android:tag="@drawable/default_contact_image" />

    <Button
        android:id="@+id/change_contact_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_contact_image"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSelectImage"
        android:text="@string/change_contact_image" />

</RelativeLayout>